// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelsListItem renders component 1`] = `
<WithStyles(ForwardRef(ListItem))
  alignItems="center"
  button={true}
  className="root-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemIcon))
    className="itemIcon-mock"
  >
    <ChatBubbleOutlineIcon
      className="icon-mock"
    />
  </WithStyles(ForwardRef(ListItemIcon))>
  <WithStyles(ForwardRef(ListItemText))
    address="zs1testaddress1"
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        badgeContent={1}
        classes={
          Object {
            "badge": "badge-mock",
          }
        }
      >
        Channel 1
      </ForwardRef(WithStyles)>
    }
    secondary=""
    secondaryTypographyProps={
      Object {
        "variant": "caption",
      }
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`ChannelsListItem renders component when public 1`] = `
<WithStyles(ForwardRef(ListItem))
  alignItems="center"
  button={true}
  className="root-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemIcon))
    className="itemIcon-mock"
  >
    <ChatBubbleOutlineIcon
      className="icon-mock"
    />
  </WithStyles(ForwardRef(ListItemIcon))>
  <WithStyles(ForwardRef(ListItemText))
    address="zs1testaddress0"
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        badgeContent={0}
        classes={
          Object {
            "badge": "badge-mock",
          }
        }
      >
        Channel 0
      </ForwardRef(WithStyles)>
    }
    secondary=""
    secondaryTypographyProps={
      Object {
        "variant": "caption",
      }
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`ChannelsListItem renders component with address 1`] = `
<WithStyles(ForwardRef(ListItem))
  alignItems="flex-start"
  button={true}
  className="root-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemIcon))
    className="itemIcon-mock"
  >
    <ChatBubbleOutlineIcon
      className="icon-mock"
    />
  </WithStyles(ForwardRef(ListItemIcon))>
  <WithStyles(ForwardRef(ListItemText))
    address="zs1testaddress1"
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        badgeContent={1}
        classes={
          Object {
            "badge": "badge-mock",
          }
        }
      >
        Channel 1
      </ForwardRef(WithStyles)>
    }
    secondary={
      <Memo(Elipsis)
        content="zs1testaddress1"
        length={20}
        tooltipPlacement="bottom"
      />
    }
    secondaryTypographyProps={
      Object {
        "variant": "caption",
      }
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;
